Fix Edge bug where text in inputs wasn't center-aligned

--- a/src/assets/themes/styles.scss
+++ b/src/assets/themes/styles.scss
@@ -538,7 +538,7 @@ input[type="password-pin"] {
   padding-left: 0.7em
 }
 
-input[type=text]::-ms-clear {
+input[type=text]::-ms-clear, input[type=password]::-ms-reveal {
   display: none;
 }
 
